# glue

./: .gitignore  Pipfile  README.md  pyproject.toml  requirements.txt
src/: main.py
src/QT/: main.py
src/_flask/: main.py
src/email/: send.py
src/error/: try.py
src/game/: 互喷.py  时钟.py  贪吃蛇.py  降价提醒.py
src/gram/: _collections.py  _enum.py  _getClassName.py  _json.py  _sleep.py  decimal_test.py  list.py  main.py  类型标注.py
src/pkg/: auto_interact.py  chat.py  g1.py  g2.py  game.py  kouhai.txt  live.py  outline.txt  qrcode.py  read_xls.py  test.py  test2.py  test3.py  test4.py  thcode.py  thcode.txt  xls.py
src/test/: main-jit.py  test.py
src/tools/: getTaoCategoryHtml.py  msg.txt  nba.py  qq.py  taobao.txt  topinyin.py  translate.py  ua.py  算命.py
src/tools/csv/: main.py  my.xlsx  sku.xlsx
src/tools/pdf/: main.py
src/tools/print/: main.py
src/web/DJANGO/DJANGO/: settings.py  urls.py
src/web/FLASK/: app.py
src/web/_flask/: main.py
src/web/config/: db.py
static/: Classic low august 2020.xlsx  refund.xls  special_rate .xlsx
